--- a/pgr-reports.yml
+++ b/pgr-reports.yml
@@ -37,15 +37,15 @@ ReportDefinitions:
   moduleName: rainmaker-pgr
   externalService:
   - entity: $.MdmsRes.RAINMAKER-PGR.ServiceDefs
-    apiURL: http://egov-mdms-service:8080/egov-mdms-service/v1/_get?moduleName=RAINMAKER-PGR&masterName=ServiceDefs&tenantId=$tenantId
+    apiURL: https://egov-uat.chandigarhsmartcity.in/egov-mdms-service/v1/_get?moduleName=RAINMAKER-PGR&masterName=ServiceDefs&tenantId=$tenantId
     keyOrder: serviceCode,department,slaHours
     tableName: tbl_dept
   - entity: $.MdmsRes.RAINMAKER-PGR.PgrDepartment
-    apiURL: http://egov-mdms-service:8080/egov-mdms-service/v1/_get?moduleName=RAINMAKER-PGR&masterName=PgrDepartment&tenantId=$tenantId
+    apiURL: https://egov-uat.chandigarhsmartcity.in/egov-mdms-service/v1/_get?moduleName=RAINMAKER-PGR&masterName=PgrDepartment&tenantId=$tenantId
     keyOrder: name,code
     tableName: tbl_def_dept
   - entity: $.MdmsRes.RAINMAKER-PGR.Sector
-    apiURL: http://egov-mdms-service:8080/egov-mdms-service/v1/_get?moduleName=RAINMAKER-PGR&masterName=Sector&tenantId=$tenantId
+    apiURL: https://egov-uat.chandigarhsmartcity.in/egov-mdms-service/v1/_get?moduleName=RAINMAKER-PGR&masterName=Sector&tenantId=$tenantId
     keyOrder: name,code
     tableName: tbl_sector
   sourceColumns:
