--- a/pgr-reports.yml
+++ b/pgr-reports.yml
@@ -148,30 +148,18 @@ ReportDefinitions:
     isMandatory: false
     searchClause: AND eg_pgr_service.createdtime <= $toDate
   query: |
-    SELECT 
-    (SELECT name from eg_user eas where eas.id::varchar in (select assignee from eg_pgr_action epa1 where epa1.businesskey = eg_pgr_service.servicerequestid and epa1.action in ('assign','reassign') and "when" = (select max("when") from eg_pgr_action epa where epa.businesskey = eg_pgr_service.servicerequestid and action in ('assign','reassign') group by epa.businesskey) and epa1.businesskey = eg_pgr_service.servicerequestid)) as lastassignedto, 
-    (SELECT deptmap_def.name FROM (VALUES tbl_def_dept) AS deptmap_def(name,code) INNER JOIN (VALUES tbl_dept) AS deptmap(serviceCode, department, slaHours) on deptmap.serviceCode = eg_pgr_service.servicecode and deptmap_def.code = deptmap.department) AS department, 
-    regexp_replace(servicecode, '([a-z])([A-Z])', '\1 \2','g') AS servicecode, 
-    (SELECT sector_def.name FROM (VALUES tbl_sector) AS sector_def(name,code) where code=eg_pgr_address.mohalla) as locality, 
-    servicerequestid AS complaintNo, 
-    to_char(to_timestamp(TRUNC(CAST(eg_pgr_service.createdtime AS bigint) / 1000)), 'DD/MM/YYYY') AS date, 
-    eg_user.name, 
-    phone, 
-    eg_pgr_address.landmark, 
-    eg_pgr_address.housenoandstreetname as address, 
-    description, 
-    case when source = 'mobileapp' then 'Citizen Mobile App' when source = 'web' then 'Citizen Web App' when source = 'ivr' then 'Customer Service Desk' else 'Customer Service Desk' end as source,
-    createuser.name as complaintraisedby,
-    (select (CASE WHEN status in('resolved','rejected','closed') or slaendtime is null then '' ELSE (CASE WHEN (((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS deptmap(serviceCode, department, slaHours) WHERE deptmap.serviceCode = eg_pgr_service.servicecode)::integer / 24) - ((((select extract(epoch from now())) * 1000) - eg_pgr_service.createdtime)::bigint/86400000)) < 1 THEN CONCAT('Overdue by ', ((((select extract(epoch from now())) * 1000) - eg_pgr_service.createdtime)::bigint/86400000) - ((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS deptmap(serviceCode, department, slaHours) WHERE deptmap.serviceCode = eg_pgr_service.servicecode)::integer / 24), ' days') ELSE CONCAT(((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS deptmap(serviceCode, department, slaHours) WHERE deptmap.serviceCode = eg_pgr_service.servicecode)::integer / 24) - ((((select extract(epoch from now())) * 1000) - eg_pgr_service.createdtime)::bigint/86400000), ' days remaining')END) END)) as slaHours,
-    to_char(to_timestamp(TRUNC(CAST(eg_pgr_service.lastmodifiedtime AS bigint) / 1000)), 'DD/MM/YYYY') AS lastactiondate,
-    Initcap(status) as status,
-    (CASE WHEN (select username from eg_user where eg_user.id::VARCHAR=eg_pgr_service.lastmodifiedby and eg_user.username='CRONJOB') is not null then 'Y' else '' end)  as autoescalated
-    FROM eg_pgr_service LEFT JOIN eg_user on eg_pgr_service.accountid = eg_user.id::VARCHAR
-    LEFT JOIN eg_pgr_address on eg_pgr_address.uuid = eg_pgr_service.addressid
-    LEFT JOIN eg_user createuser on createuser.id::varchar=eg_pgr_service.createdby
-    WHERE eg_pgr_service.tenantid LIKE $tenantid
-    AND status IN ('open','assigned','reassignrequested','rejected','escalatedlevel1pending','escalatedlevel2pending','closed','resolved')
-  orderby: ORDER BY eg_pgr_service.createdtime asc
+    SELECT lastassignedto, servicecode, locality, complaintno, date, name, 
+       phone, landmark, address, description, complaintraisedby, slahours, 
+       lastactiondate, status, autoescalated, department, servicerequestid, 
+       tenantid, createdtime ,(select (CASE WHEN status in('resolved','rejected','closed') or slaendtime is null then '' 
+       ELSE (CASE WHEN (((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS deptmap(serviceCode, department, slaHours) WHERE
+       deptmap.serviceCode = eg_pgr_service.servicecode)::integer / 24) - ((((select extract(epoch from now())) * 1000) - createdtime)
+       ::bigint/86400000))	< 1 THEN CONCAT('Overdue by ', ((((select extract(epoch from now())) * 1000) - createdtime)::bigint/86400000) 
+       - ((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS deptmap(serviceCode, department, slaHours) WHERE deptmap.serviceCode = 
+        eg_pgr_service.servicecode)::integer / 24), ' days') ELSE CONCAT(((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS
+        deptmap(serviceCode, department, slaHours) WHERE deptmap.serviceCode = eg_pgr_service.servicecode)::integer / 24) - 
+        ((((select extract(epoch from now())) * 1000) - createdtime)::bigint/86400000), ' days remaining')END) END)) as slaHours FROM public.eg_pgr_discription_report
+      orderby: ORDER BY eg_pgr_discription_report.createdtime asc
 
 - reportName: StateSourceReport
   summary: Source of complaints across tenants
