--- a/pgr-reports.yml
+++ b/pgr-reports.yml
@@ -140,13 +140,13 @@ ReportDefinitions:
     type: epoch
     source: eg_pgr_service
     isMandatory: false
-    searchClause: AND eg_pgr_service.createdtime >= $fromDate
+    searchClause: AND eg_pgr_discription_report.createdtime >= $fromDate
   - name: toDate
     label: reports.rainmaker-pgr.dateto
     type: epoch
     source: eg_pgr_service
     isMandatory: false
-    searchClause: AND eg_pgr_service.createdtime <= $toDate
+    searchClause: AND eg_pgr_discription_report.createdtime <= $toDate
   query: |
     SELECT lastassignedto, servicecode, locality, complaintno, date, name, 
        phone, landmark, address, description, complaintraisedby, slahours, 
