--- a/pgr-reports.yml
+++ b/pgr-reports.yml
@@ -159,7 +159,7 @@ ReportDefinitions:
         eg_pgr_service.servicecode)::integer / 24), ' days') ELSE CONCAT(((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS
         deptmap(serviceCode, department, slaHours) WHERE deptmap.serviceCode = eg_pgr_service.servicecode)::integer / 24) - 
         ((((select extract(epoch from now())) * 1000) - createdtime)::bigint/86400000), ' days remaining')END) END)) as slaHours FROM public.eg_pgr_discription_report
-      orderby: ORDER BY eg_pgr_discription_report.createdtime asc
+        ORDER BY eg_pgr_discription_report.createdtime asc
 
 - reportName: StateSourceReport
   summary: Source of complaints across tenants
