--- a/pgr-reports.yml
+++ b/pgr-reports.yml
@@ -149,14 +149,7 @@ ReportDefinitions:
     SELECT lastassignedto, servicecode, locality, complaintno, date, name, 
        phone, landmark, address, description, complaintraisedby, slahours, 
        lastactiondate, status, autoescalated, department, servicerequestid, 
-       tenantid, createdtime ,(select (CASE WHEN status in('resolved','rejected','closed') or slaendtime is null then '' 
-       ELSE (CASE WHEN (((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS deptmap(serviceCode, department, slaHours) WHERE
-       deptmap.serviceCode = eg_pgr_service.servicecode)::integer / 24) - ((((select extract(epoch from now())) * 1000) - createdtime)
-       ::bigint/86400000))	< 1 THEN CONCAT('Overdue by ', ((((select extract(epoch from now())) * 1000) - createdtime)::bigint/86400000) 
-       - ((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS deptmap(serviceCode, department, slaHours) WHERE deptmap.serviceCode = 
-        eg_pgr_service.servicecode)::integer / 24), ' days') ELSE CONCAT(((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS
-        deptmap(serviceCode, department, slaHours) WHERE deptmap.serviceCode = eg_pgr_service.servicecode)::integer / 24) - 
-        ((((select extract(epoch from now())) * 1000) - createdtime)::bigint/86400000), ' days remaining')END) END)) as slaHours FROM public.eg_pgr_discription_report
+       tenantid, createdtime  FROM public.eg_pgr_discription_report
          where eg_pgr_discription_report.createdtime >= $fromDate  AND eg_pgr_discription_report.createdtime <= $toDate
 
 - reportName: StateSourceReport
