--- a/pgr-reports.yml
+++ b/pgr-reports.yml
@@ -40,14 +40,6 @@ ReportDefinitions:
     apiURL: https://egov-uat.chandigarhsmartcity.in/egov-mdms-service/v1/_get?moduleName=RAINMAKER-PGR&masterName=ServiceDefs&tenantId=$tenantId
     keyOrder: serviceCode,department,slaHours
     tableName: tbl_dept
-  - entity: $.MdmsRes.RAINMAKER-PGR.PgrDepartment
-    apiURL: https://egov-uat.chandigarhsmartcity.in/egov-mdms-service/v1/_get?moduleName=RAINMAKER-PGR&masterName=PgrDepartment&tenantId=$tenantId
-    keyOrder: name,code
-    tableName: tbl_def_dept
-  - entity: $.MdmsRes.RAINMAKER-PGR.Sector
-    apiURL: https://egov-uat.chandigarhsmartcity.in/egov-mdms-service/v1/_get?moduleName=RAINMAKER-PGR&masterName=Sector&tenantId=$tenantId
-    keyOrder: name,code
-    tableName: tbl_sector
   sourceColumns:
   - name: department
     label: reports.rainmaker-pgr.department
@@ -153,11 +145,11 @@ ReportDefinitions:
        lastactiondate, status, autoescalated, department, servicerequestid, 
        tenantid, createdtime,(select (CASE WHEN status in('resolved','rejected','closed') or slaendtime is null then '' 
        ELSE (CASE WHEN (((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS deptmap(serviceCode, department, slaHours) WHERE
-       deptmap.serviceCode = eg_pgr_service.servicecode)::integer / 24) - ((((select extract(epoch from now())) * 1000) - createdtime)
+       deptmap.serviceCode = eg_pgr_discription_report.servicecode)::integer / 24) - ((((select extract(epoch from now())) * 1000) - createdtime)
        ::bigint/86400000))	< 1 THEN CONCAT('Overdue by ', ((((select extract(epoch from now())) * 1000) - createdtime)::bigint/86400000) 
        - ((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS deptmap(serviceCode, department, slaHours) WHERE deptmap.serviceCode = 
-        eg_pgr_service.servicecode)::integer / 24), ' days') ELSE CONCAT(((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS
-        deptmap(serviceCode, department, slaHours) WHERE deptmap.serviceCode = eg_pgr_service.servicecode)::integer / 24) - 
+        eg_pgr_discription_report.servicecode)::integer / 24), ' days') ELSE CONCAT(((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS
+        deptmap(serviceCode, department, slaHours) WHERE deptmap.serviceCode = eg_pgr_discription_report.servicecode)::integer / 24) - 
         ((((select extract(epoch from now())) * 1000) - createdtime)::bigint/86400000), ' days remaining')END) END)) as slaHours  FROM public.eg_pgr_discription_report WHERE  
        
 
