--- a/pgr-reports.yml
+++ b/pgr-reports.yml
@@ -40,6 +40,10 @@ ReportDefinitions:
     apiURL: https://egov-uat.chandigarhsmartcity.in/egov-mdms-service/v1/_get?moduleName=RAINMAKER-PGR&masterName=ServiceDefs&tenantId=$tenantId
     keyOrder: serviceCode,department,slaHours
     tableName: tbl_dept
+  - entity: $.MdmsRes.RAINMAKER-PGR.PgrDepartment
+    apiURL: http://egov-mdms-service:8080/egov-mdms-service/v1/_get?moduleName=RAINMAKER-PGR&masterName=PgrDepartment&tenantId=$tenantId
+    keyOrder: name,code
+    tableName: tbl_def_dept   
   sourceColumns:
   - name: department
     label: reports.rainmaker-pgr.department
