--- a/pgr-reports.yml
+++ b/pgr-reports.yml
@@ -144,8 +144,8 @@ ReportDefinitions:
     isMandatory: true
     searchClause: AND eg_pgr_discription_report.createdtime <= $toDate
   query: |
-    SELECT *,regexp_replace(servicecode, '([a-z])([A-Z])', '\1 \2','g') AS servicecode,(select (CASE WHEN status in('resolved','rejected','closed') or slaendtime is null then '' 
-       ELSE (CASE WHEN (((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS deptmap(serviceCode, department, slaHours) WHERE
+    SELECT *,regexp_replace(servicecode, '([a-z])([A-Z])', '\1 \2','g') AS servicecode,(select (CASE WHEN status in('resolved','rejected','closed') or slaendtime is null
+      or slaendtime=0 then '' ELSE (CASE WHEN (((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS deptmap(serviceCode, department, slaHours) WHERE
        deptmap.serviceCode = eg_pgr_discription_report.servicecode)::integer / 24) - ((((select extract(epoch from now())) * 1000) - createdtime)
        ::bigint/86400000))	< 1 THEN CONCAT('Overdue by ', ((((select extract(epoch from now())) * 1000) - createdtime)::bigint/86400000) 
        - ((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS deptmap(serviceCode, department, slaHours) WHERE deptmap.serviceCode = 
