--- a/hc-reports.yml
+++ b/hc-reports.yml
@@ -9,8 +9,8 @@ ReportDefinitions:
     type: string
     source: hc
     total: false
-  - name: requestdate
-    label: report.hc.requestdate
+  - name: requestDate
+    label: report.hc.requestDate
     type: string
     source: hc
     total: false
@@ -50,6 +50,6 @@ ReportDefinitions:
     source: hc
     total: true	
   query: |
-    SELECT service_request_id,createdtime as requestdate, owner_name, service_type, servicerequestsubtype,  locality,  
+    SELECT service_request_id,createdtime as requestDate, owner_name, service_type, servicerequestsubtype,  locality,  
  service_request_status,   description, current_assignee  FROM public.eg_hc_service_request;
 
