--- a/hc-reports.yml
+++ b/hc-reports.yml
@@ -50,6 +50,5 @@ ReportDefinitions:
     source: hc
     total: true	
   query: |
-    SELECT service_request_id,createdtime as requestDate, owner_name, service_type, servicerequestsubtype,  locality,  
- service_request_status,   description, current_assignee  FROM public.eg_hc_service_request;
+    SELECT service_request_id,createdtime as requestDate, owner_name, service_type, servicerequestsubtype,  locality,  service_request_status,   description, current_assignee  FROM public.eg_hc_service_request;
 
