--- a/hc-reports.yml
+++ b/hc-reports.yml
@@ -34,8 +34,8 @@ ReportDefinitions:
     type: string
     source: hc
     total: false
-  - name: service_request_status
-    label: report.hc.service_request_status
+  - name: status
+    label: report.hc.status
     type: string
     source: hc
     total: false
@@ -50,4 +50,4 @@ ReportDefinitions:
     source: hc
     total: true	
   query: |
-    SELECT service_request_id,createdtime as requestDate, owner_name, service_type, servicerequestsubtype,  locality,  service_request_status,   description, current_assignee  FROM public.eg_hc_service_request;
+    SELECT service_request_id,createdtime as requestDate, owner_name, service_type, servicerequestsubtype,  locality,  service_request_status as status,   description, current_assignee  FROM public.eg_hc_service_request;
