--- a/hc-reports.yml
+++ b/hc-reports.yml
@@ -53,14 +53,44 @@ ReportDefinitions:
   - name: fromDate
     label: report.hc.fromDate
     type: epoch
-    source: eg_hc_service_request
-    isMandatory: true
-    searchClause:    eg_hc_service_request.createdtime >= $fromDate
+    source: eg_hc_service_request  
   - name: toDate
     label: report.hc.toDate
     type: epoch
     source: eg_hc_service_request
-    isMandatory: true
-    searchClause: AND eg_hc_service_request.createdtime <= $toDate	
+  - name: serviceRequestId
+    label: report.hc.serviceRequestId
+    type: string
+    source: eg_hc_service_request  
+  - name: serviceType
+    label: report.hc.serviceType
+    type: string
+    source: eg_hc_service_request	
+  - name: serviceRequestSubType
+    label: report.hc.serviceRequestSubType
+    type: string
+    source: eg_hc_service_request  
+  - name: ownerName
+    label: report.hc.ownerName
+    type: string
+    source: eg_hc_service_request
+  - name: serviceRequestStatus
+    label: report.hc.serviceRequestStatus
+    type: string
+    source: eg_hc_service_request  
+  - name: locality
+    label: report.hc.locality
+    type: string
+    source: eg_hc_service_request   
+  - name: assigner
+    label: report.hc.assigner
+    type: string
+    source: eg_hc_service_request    
   query: |
-    SELECT service_request_id,createdtime as requestDate, owner_name, service_type, servicerequestsubtype,  locality,  service_request_status as status,   description, current_assignee  FROM public.eg_hc_service_request WHERE;
+    SELECT service_request_id,createdtime as requestDate, owner_name, service_type, servicerequestsubtype,  locality,  service_request_status as status,   description,(case when current_assignee ~ '^[0-9\.]+$' then (SELECT username as name
+      FROM eg_user  where id::varchar=current_assignee) else current_assignee end )  FROM public.eg_hc_service_request 
+    WHERE  eg_hc_service_request.createdtime >= $fromDate AND eg_hc_service_request.createdtime <= $toDate	AND service_request_id=(case when $serviceRequestId  <>'' then $serviceRequestId  else service_request_id end)  
+    and service_type=(case when $serviceType  <>'' then $serviceType  else service_type end) and      COALESCE( replace(cast(servicerequestsubtype -> 'subservicetype' as VARCHAR),'"','')::varchar, '')= 
+    (case when $serviceRequestSubType  <>'' then $serviceRequestSubType  else  COALESCE( replace(cast(servicerequestsubtype ->     'subservicetype' as VARCHAR),'"','')::varchar, '') 	end) and owner_name=(case when $ownerName  <>'' then $ownerName  else owner_name end) 
+    and service_request_status=(case when $serviceRequestStatus  <>'' then $serviceRequestStatus  else service_request_status end)  and locality=(case when $locality  <>'' then $locality 
+    else locality end) AND  service_request_id in( select DISTINCT(businessid) from eg_wf_processinstance_v2 where assigner=(case when $assigner  <>'' then $assigner  else assigner end) and modulename='HORTICULTURE') ;
