--- a/pgr-reports.yml
+++ b/pgr-reports.yml
@@ -131,19 +131,19 @@ ReportDefinitions:
     label: reports.rainmaker-pgr.datefrom
     type: epoch
     source: eg_pgr_discription_report
-    isMandatory: flase
+    isMandatory: false
     searchClause:  AND eg_pgr_discription_report.createdtime >= $fromDate
   - name: toDate
     label: reports.rainmaker-pgr.dateto
     type: epoch
     source: eg_pgr_discription_report
-    isMandatory: flase
+    isMandatory: false
     searchClause: AND eg_pgr_discription_report.createdtime <= $toDate
   - name: toDate
     label: reports.rainmaker-pgr.complaintno
     type: String
     source: eg_pgr_discription_report
-    isMandatory: flase
+    isMandatory: false
     searchClause: AND eg_pgr_discription_report.complaintno = $complaintNo   
   query: |
     SELECT *,regexp_replace(servicecode, '([a-z])([A-Z])', '\1 \2','g') AS servicecode,(select (CASE WHEN status in('resolved','rejected','closed') or slaendtime is null
