--- a/pgr-reports.yml
+++ b/pgr-reports.yml
@@ -139,12 +139,12 @@ ReportDefinitions:
     source: eg_pgr_discription_report
     isMandatory: false
     searchClause: AND eg_pgr_discription_report.createdtime <= $toDate
-  - name: toDate
+  - name: complaintNo
     label: reports.rainmaker-pgr.complaintno
     type: String
     source: eg_pgr_discription_report
     isMandatory: false
-    searchClause: AND eg_pgr_discription_report.complaintno = $complaintNo   
+    searchClause: AND eg_pgr_discription_report.complaintno LIKE $complaintNo   
   query: |
     SELECT *,regexp_replace(servicecode, '([a-z])([A-Z])', '\1 \2','g') AS servicecode,(select (CASE WHEN status in('resolved','rejected','closed') or slaendtime is null
       or slaendtime=0 then '' ELSE (CASE WHEN (((SELECT deptmap.slaHours FROM (VALUES tbl_dept) AS deptmap(serviceCode, department, slaHours) WHERE
