--- a/pgr-reports.yml
+++ b/pgr-reports.yml
@@ -127,6 +127,18 @@ ReportDefinitions:
     source: eg_pgr_discription_report
     total: false
   searchParams: 
+  - name: fromDate
+    label: reports.rainmaker-pgr.datefrom
+    type: epoch
+    source: eg_pgr_discription_report
+    isMandatory: false
+    searchClause:  AND eg_pgr_discription_report.createdtime >= $fromDate
+  - name: toDate
+    label: reports.rainmaker-pgr.dateto
+    type: epoch
+    source: eg_pgr_discription_report
+    isMandatory: false
+    searchClause: AND eg_pgr_discription_report.createdtime <= $toDate  
   - name: complaintNo
     label: reports.rainmaker-pgr.complaintno
     type: String
@@ -288,6 +300,12 @@ ReportDefinitions:
     source: eg_pgr_service
     isMandatory: false
     searchClause: AND eg_pgr_service.createdtime <= $toDate
+  - name: complaintNo
+    label: reports.rainmaker-pgr.complaintno
+    type: String
+    source: eg_pgr_discription_report
+    isMandatory: false
+    searchClause: AND eg_pgr_discription_report.complaintno LIKE $complaintNo       
   query: |
     SELECT (SELECT deptmap.department FROM (VALUES tbl_dept) AS deptmap(serviceCode, department, slaHours) WHERE deptmap.serviceCode = eg_pgr_service.servicecode) AS department, 
     regexp_replace(eg_pgr_service.servicecode, '([a-z])([A-Z])', '\1 \2','g') AS servicecode, 
