--- a/pgr-reports.yml
+++ b/pgr-reports.yml
@@ -131,13 +131,13 @@ ReportDefinitions:
     label: reports.rainmaker-pgr.datefrom
     type: epoch
     source: eg_pgr_discription_report
-    isMandatory: false
+    isMandatory: true
     searchClause:  AND eg_pgr_discription_report.createdtime >= $fromDate
   - name: toDate
     label: reports.rainmaker-pgr.dateto
     type: epoch
     source: eg_pgr_discription_report
-    isMandatory: false
+    isMandatory: true
     searchClause: AND eg_pgr_discription_report.createdtime <= $toDate  
   - name: complaintNo
     label: reports.rainmaker-pgr.complaintno
