--- a/pgr-reports.yml
+++ b/pgr-reports.yml
@@ -157,7 +157,7 @@ ReportDefinitions:
         WHERE eg_pgr_discription_report.tenantid LIKE  $tenantid    
   orderby: ORDER BY eg_pgr_discription_report.createdtime asc
        
-- reportName: serachReportByComplaint
+- reportName: ComplaintReport
   summary: Fetches department wise reports based description of the complaint and complaint number
   version: 1.0.0
   moduleName: rainmaker-pgr
