--- a/pgr-reports.yml
+++ b/pgr-reports.yml
@@ -152,7 +152,7 @@ ReportDefinitions:
   orderby: ORDER BY eg_pgr_discription_report.createdtime asc
        
 - reportName: ComplaintReport
-  summary: Fetches department wise reports based description of the complaint and complaint number
+  summary: Fetches department wise reports based description of the complaint and Complaint number
   version: 1.0.0
   moduleName: rainmaker-pgr
   externalService:
