--- a/rainmaker-pgr-v2.yml
+++ b/rainmaker-pgr-v2.yml
@@ -61,6 +61,9 @@ SearchDefinitions:
     - name: mohalla
       isMandatory: false
       jsonPath: $.searchCriteria.mohalla
+    - name: offset
+      isMandatory: false
+      jsonPath: $.searchCriteria.offset      
 
    output:
     jsonFormat: {"ResponseInfo": {}}
