--- a/rainmaker-pgr-v2.yml
+++ b/rainmaker-pgr-v2.yml
@@ -5,7 +5,7 @@ SearchDefinitions:
  definitions:
  - name: serviceSearchWithDetails
    query: 
-    baseQuery: select array_to_json(array_agg(row_to_json(serviceRequests))) from (select (select (select (row_to_json(services)) from ( select *, (select (select row_to_json(auditDetails) from (select createdtime, lastmodifiedtime, createdby, lastmodifiedby from eg_pgr_service where svc.serviceRequestId=eg_pgr_service.serviceRequestId) auditDetails) as auditDetails), (select (select (row_to_json(addressDetail)) from (select * from eg_pgr_address where eg_pgr_address.uuid=eg_pgr_service.addressid) addressDetail) as addressDetail) from eg_pgr_service svc where svc.serviceRequestId=eg_pgr_service.serviceRequestId order by createdtime desc) services) as services),(select (select array_to_json(array_agg(row_to_json(actionHistory))) from ( select * from eg_pgr_action where businessKey=eg_pgr_service.serviceRequestId order by "when" desc) actionHistory) as actionHistory) from eg_pgr_service LEFT JOIN (select mohalla,uuid from eg_pgr_address) temp_address on temp_address.uuid = eg_pgr_service.addressid $where order by createdtime desc) serviceRequests
+    baseQuery: select array_to_json(array_agg(row_to_json(serviceRequests))) from (select (select (select (row_to_json(services)) from ( select *, (select (select row_to_json(auditDetails) from (select createdtime, lastmodifiedtime, createdby, lastmodifiedby from eg_pgr_service where svc.serviceRequestId=eg_pgr_service.serviceRequestId) auditDetails) as auditDetails), (select (select (row_to_json(addressDetail)) from (select * from eg_pgr_address where eg_pgr_address.uuid=eg_pgr_service.addressid) addressDetail) as addressDetail) from eg_pgr_service svc where svc.serviceRequestId=eg_pgr_service.serviceRequestId order by createdtime desc) services) as services),(select (select array_to_json(array_agg(row_to_json(actionHistory))) from ( select * from eg_pgr_action where businessKey=eg_pgr_service.serviceRequestId order by "when" desc) actionHistory) as actionHistory) from eg_pgr_service LEFT JOIN (select mohalla,uuid from eg_pgr_address) temp_address on temp_address.uuid = eg_pgr_service.addressid $where order by createdtime desc offset ?) serviceRequests
     groupBy:    
     orderBy: 
    searchParams:
@@ -60,10 +60,7 @@ SearchDefinitions:
       jsonPath: $.searchCriteria.slaEndTime
     - name: mohalla
       isMandatory: false
-      jsonPath: $.searchCriteria.mohalla
-    - name: offset
-      isMandatory: false
-      jsonPath: $.searchCriteria.offset      
+      jsonPath: $.searchCriteria.mohalla     
 
    output:
     jsonFormat: {"ResponseInfo": {}}
